spacing fixes

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -80,7 +80,7 @@ img{
     grid-column: 2/3;
     grid-row: 2/3;
     position: relative;
-    bottom: 510px;
+    bottom: 530px;
     
 }
 
@@ -307,7 +307,7 @@ div>p{
     flex-direction: column;
     justify-content: center;
     position: relative;
-    bottom: 120px;
+    bottom: 180px;
     z-index: 10;
 }
 
